deployments/openshift/kustomize/overlays/app/prod/patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 2
  selector:
    matchLabels:
      name: app
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: app
    spec:
      automountServiceAccountToken: false
      containers:
      - name: app
        image: artifacts.developer.gov.bc.ca/af3c-gen-docker-local/app:latest
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
    name: app
spec:
  host: jobstore.apps.silver.devops.gov.bc.ca
