deployments/openshift/kustomize/overlays/app/prod/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: jobstore-route
spec:
  host: jobstore.gov.bc.ca
  to:
    kind: Service
    name: app
  port:
    targetPort: 5173
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
